# placement

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/ext/: validator.py
api-ref/source/: aggregates.inc  allocation_candidates.inc  allocations.inc  conf.py  errors.inc  generations.inc  index.rst  inventories.inc  parameters.yaml  request-ids.inc  reshaper.inc  resource_class.inc  resource_provider_traits.inc  resource_providers.inc  root.inc  traits.inc  usages.inc
api-ref/source/samples/allocation_candidates/: get-allocation_candidates-1.34.json
api-ref/source/samples/allocations/: get-allocations-1.38.json  manage-allocations-request-1.38.json  update-allocations-request-1.38.json
doc/: README.rst  requirements.txt
doc/source/: conf.py  index.rst  placement-api-microversion-history.rst
doc/source/_extra/: .htaccess
doc/source/_static/: .placeholder
doc/source/admin/: index.rst  upgrade-notes.rst  upgrade-to-stein.rst
doc/source/cli/: index.rst  placement-manage.rst  placement-status.rst
doc/source/configuration/: config.rst  index.rst  placement-policy.rst  policy.rst  sample-config.rst  sample-policy.rst
doc/source/contributor/: api-ref-guideline.rst  architecture.rst  contributing.rst  goals.rst  index.rst  placement.rst  quick-dev.rst  testing.rst  vision-reflection.rst
doc/source/install/: controller-install-obs.rst  controller-install-rdo.rst  controller-install-ubuntu.rst  endpoints.rst  from-pypi.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  verify.rst
doc/source/specs/: index.rst  placeholder.rst  template.rst
doc/source/upgrade/: to-stein.rst
doc/source/usage/: index.rst  provider-tree.rst
doc/source/user/: index.rst  provider-tree.rst
doc/test/: redirect-tests.txt
etc/placement/: README-policy.yaml.txt  README.rst  config-generator.conf  policy-generator.conf
gate/: README  perfload-nested-loader.sh  perfload-nested-runner.sh  perfload-runner.sh  perfload-server.sh
gate/gabbits/: nested-perfload.yaml
placement/: attribute_cache.py  auth.py  context.py  db_api.py  deploy.py  direct.py  errors.py  exception.py  fault_wrap.py  handler.py  i18n.py  lib.py  microversion.py  policy.py  requestlog.py  resource_class_cache.py  rest_api_version_history.rst  test.py  util.py  utils.py  wsgi.py  wsgi_wrapper.py
placement/cmd/: manage.py  status.py
placement/conf/: __init__.py  api.py  base.py  database.py  keystone.py  opts.py  paths.py  placement.py  utils.py  workarounds.py
placement/db/: __init__.py  api.py  base.py  migration.py
placement/db/sqlalchemy/: alembic.ini  api.py  migration.py  models.py  types.py  utils.py
placement/handlers/: aggregate.py  allocation.py  allocation_candidate.py  inventory.py  reshaper.py  resource_class.py  resource_provider.py  root.py  trait.py  usage.py  util.py
placement/objects/: allocation.py  allocation_candidate.py  common.py  consumer.py  consumer_type.py  inventory.py  project.py  research_context.py  reshaper.py  resource_class.py  resource_provider.py  rp_candidates.py  trait.py  usage.py  user.py
placement/policies/: __init__.py  aggregate.py  allocation.py  allocation_candidate.py  base.py  inventory.py  reshaper.py  resource_class.py  resource_provider.py  trait.py  usage.py
placement/schemas/: allocation.py  allocation_candidate.py  common.py  inventory.py  reshaper.py  resource_class.py  trait.py  usage.py
placement/tests/: README.rst  fixtures.py
placement/tests/functional/: base.py  test_allocation.py  test_allocation_candidates.py  test_api.py  test_direct.py  test_lib_sync.py  test_placement_api.py  test_verify_policy.py
placement/tests/unit/: __init__.py  base.py  policy_fixture.py  test_auth.py  test_context.py  test_db_api.py  test_db_conf.py  test_deploy.py  test_fault_wrap.py  test_handler.py  test_microversion.py  test_policy.py  test_requestlog.py  test_util.py
placement/wsgi/: __init__.py  api.py
placement_db_tools/: __init__.py  mysql-migrate-db.sh  postgresql-migrate-db.sh
playbooks/: nested-perfload.yaml  perfload.yaml  post.yaml
releasenotes/notes/: add-placment-wsgi-module-ae42938ebe0258cb.yaml  alloc-candidates-in-tree-f69b0de5ba33096b.yaml  allocation-candidate-mappings-e00cf6deadcee9ab.yaml  allocation-candidate-same_subtree-aeed7b2570293dfb.yaml  allocation-candidates-root_required-bfe4f96f96a2a5db.yaml  allocation_conflict_retry_count-329daae86059f5ec.yaml  any-traits-support-d3807c27e5a8865c.yaml  bug-1792503-member-of-5c10df94caf3bd08.yaml  bug-2070257-allocation-candidates-generation-limit-and-strategy.yaml-e73796898163fb55.yaml  bug-2126751-optimize_for_wide_provider_trees-b50b7813fd0d9dd2.yaml  bump-hacking-for-pyflakes-version-conflict-708a87471e4407c2.yaml  consumer_type-857b812aef10381e.yaml  create-allocation-empty-mapping-field-f5f97de6df891362.yaml  db-auto-sync-e418f3f181958c7c.yaml  deprecate-placement-policy-file-1777dc2e92d8363c.yaml  drop-python-2-aabea7dcdeca7ebf.yaml  fix-osprofiler-support-78b34a92c32fd30f.yaml  granular-request-suffix-a7fd857eadc16b56.yaml  http_proxy_to_wsgi-6c8392d7eaed7c8d.yaml  limit-nested-allocation-candidates-0886e569d15ad951.yaml  negative-aggregate-membership-1dde3cbe27c69279.yaml  placement-status-upgrade-check-3aa412fd6cb1e4bc.yaml  policy-defaults-refresh-d903d15cd51ac1a8.yaml  rbac-policy-support-94f84c29da81c331.yaml  re-parenting-providers-94dcedff45b35bf7.yaml  remove-deprecated-placement-policy-cba1414ca626302d.yaml  remove-placement-policy-file-config-bb9bb26332413a77.yaml  remove-wsgi-scripts-3823627039fa98bc.yaml  set_root_provider_id-53930a5d1dbd374f.yaml  stein-prelude-779b0dbfe65cf9ac.yaml  train-prelude-06739452ba2f66d9.yaml  train-require-root-provider-ids-60bc374ac354f41e.yaml  upgrade-status-check-incomplete-consumers-3362d7db55dd8bdf.yaml
releasenotes/source/: conf.py  index.rst
tools/: mysql-migrate-db.sh  postgresql-migrate-db.sh
(+108 files in other folders)
