[metadata]
name = openstack-placement
summary = Resource provider inventory usage and allocation service
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/placement/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    placement

[entry_points]
oslo.config.opts =
    placement.conf = placement.conf.opts:list_opts

oslo.policy.enforcer =
    placement = placement.policy:get_enforcer

oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    placement = placement.policies:list_rules

console_scripts =
    placement-manage = placement.cmd.manage:main
    placement-status = placement.cmd.status:main
wsgi_scripts =
    placement-api = placement.wsgi:init_application

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
