[metadata]
name = openstack-placement
summary = Resource provider inventory usage and allocation service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/placement/latest/
project_urls =
    Bug Tracker = https://storyboard.openstack.org/#!/project/openstack/placement
    Documentation = https://docs.openstack.org/placement/latest/
    API Reference = https://docs.openstack.org/api-ref/placement/
    Source Code = https://opendev.org/openstack/placement
    Release Notes = https://docs.openstack.org/releasenotes/placement/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    placement
    placement_db_tools

[entry_points]
oslo.config.opts =
    placement.conf = placement.conf.opts:list_opts
oslo.config.opts.defaults =
    nova.conf = placement.conf.base:set_lib_defaults
oslo.policy.enforcer =
    placement = placement.policy:get_enforcer
oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    placement = placement.policies:list_rules
console_scripts =
    placement-manage = placement.cmd.manage:main
    placement-status = placement.cmd.status:main
wsgi_scripts =
    placement-api = placement.wsgi:init_application
